--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </article>
     <footer>
         <p>Copyright &copy; 2024</p>
+        <!--comentario de teste-->
     </footer>
 </body>
 </html>
